Fix filtering bug and add launcher icon

--- a/app/src/main/res/layout/item_tour.xml
+++ b/app/src/main/res/layout/item_tour.xml
@@ -5,8 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
     android:layout_marginStart="8dp"
+    android:layout_marginTop="10dp"
     android:layout_marginEnd="8dp">
 
 
@@ -31,20 +31,23 @@
 
         <TextView
             android:id="@+id/flightsTV"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:textSize="16sp"
-            tools:text="10 variants of flight"
+            android:layout_marginEnd="8dp"
+            android:maxLines="1"
+            app:layout_constraintEnd_toStartOf="@+id/priceTV"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/hotelNameTV"
-            app:layout_constraintTop_toBottomOf="@+id/hotelNameTV" />
+            app:layout_constraintTop_toBottomOf="@+id/hotelNameTV"
+            tools:text="10 variants of flight" />
 
         <TextView
             android:id="@+id/priceTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@android:color/black"
-            android:textSize="24sp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/flightsTV"
             app:layout_constraintEnd_toEndOf="parent"
             tools:text="from 199999 RUB" />
